--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	    <h2>Para abrir um chamado de suporte de TI preencha o formulário mais adequado:</h2>
 	    
 	    <div class="tipos-chamados">
-		    <a  href="https://zarpo.on.spiceworks.com/portal/tickets" rel="modal:open"><i class="fa fa-screwdriver"></i> Chamado de Suporte</a>
+		    <a  href="https://zarpo.on.spiceworks.com/portal/tickets" target="_blank"><i class="fa fa-screwdriver"></i> Chamado de Suporte</a>
 		    <a  href="https://form.jotformz.com/90526047958668" rel="modal:open"><i class="fa fa-user-plus"></i> Entrada de Funcionário</a>
 		    <a  href="https://form.jotformz.com/90526441690659" rel="modal:open"><i class="fa fa-user-minus"></i> Saída de Funcionário</a>
 		    <a  href="https://form.jotformz.com/90526079912663" rel="modal:open"><i class="fa fa-laptop"></i> Computador Adicional</a>
