--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
 	    .modal{
 		    max-width: 900px;
 	    }
+	     @media (max-width: 767px){
+		    .tipos-chamados{
+			    flex-direction: column;
+		    }
+		    .tipos-chamaados a{
+			    width: 100%;
+		    }
+		    
+	    }
     </style>
 </head>
 
