--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<!-- Remember to include jQuery :) -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-	
+<script src="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.5.1/js/iziModal.min.js" integrity="sha256-vVnwgKyq3pIb4XdL91l1EC8j7URqDRK8BAWvSnKX0U8=" crossorigin="anonymous"></script>
 	<!-- jQuery Modal -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.5.1/css/iziModal.min.css" />
+
 
     <style>
 	    body{
@@ -84,11 +84,31 @@
 	    <h2>Para abrir um chamado de suporte de TI preencha o formulário mais adequado:</h2>
 	    
 	    <div class="tipos-chamados">
-		    <a  href="https://zarpo.on.spiceworks.com/portal/tickets" target="_blank"><i class="fa fa-screwdriver"></i> Chamado de Suporte</a>
-		    <a  href="https://form.jotformz.com/90526047958668" rel="modal:open"><i class="fa fa-user-plus"></i> Entrada de Funcionário</a>
-		    <a  href="https://form.jotformz.com/90526441690659" rel="modal:open"><i class="fa fa-user-minus"></i> Saída de Funcionário</a>
-		    <a  href="https://form.jotformz.com/90526079912663" rel="modal:open"><i class="fa fa-laptop"></i> Computador Adicional</a>
+		    <a  href="https://zarpo.on.spiceworks.com/portal/tickets" class="trigger"><i class="fa fa-screwdriver"></i> Chamado de Suporte</a>
+		    <a  href="https://form.jotformz.com/90526047958668" class="trigger"><i class="fa fa-user-plus"></i> Entrada de Funcionário</a>
+		    <a  href="https://form.jotformz.com/90526441690659" class="trigger"><i class="fa fa-user-minus"></i> Saída de Funcionário</a>
+		    <a  href="https://form.jotformz.com/90526079912663" class="trigger"><i class="fa fa-laptop"></i> Computador Adicional</a>
 	    </div>
 	</div>
+	
+
+<div id="modal-iframe"> 
+</div>
+ 
+<!-- Trigger to open Modal -->
+<a href="https://github.com/dolce/iziModal" class="trigger">Modal</a>
+
+<script>
+	$(document).ready(function(){
+		$("#modal-iframe").iziModal();		
+		
+		$(document).on('click', '.trigger', function (event) {
+		    event.preventDefault();
+		    $('#modal-iframe').iziModal('open')
+		});
+
+
+	})
+</script>
 </body>
 </html>
